--- a/projects/doc-makerfaire/vivian.html
+++ b/projects/doc-makerfaire/vivian.html
@@ -72,20 +72,21 @@
 
 <body>
   <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a class="active" href="https://vivmokona.github.io/des157/final/index.html">Home</a>
-     <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-    <a href="profile/form.html">Profile</a>
-    <a href="contact/index.html">Contact</a>
-  </div>
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a href="https://fxtzhou.github.io/des157/projects/final/index.html">Home</a>
+		<a class="active" href="https://vivmokona.github.io/des157/final/index.html">Map</a>
+				<a href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
+		<a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+		<a href="contact/index.html">Contact</a>
+	</div>
 
   <div id="main">
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
 
-
   <section>
     <div class="profile">
+        <a style="text-align: left;"href="https://vivmokona.github.io/des157/final/index.html">Back</a><br>
     <img src="photos/vivian.jpg" width="200px">
     <h1>Vivian Luu</h1>
     <h2>Graphic Design</h2>
