--- a/projects/doc-makerfaire/index.html
+++ b/projects/doc-makerfaire/index.html
@@ -76,7 +76,7 @@
 		<a class="active" href="https://vivmokona.github.io/des157/final/index.html">Map</a>
 				<a href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
 		<a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-		<a href="contact/index.html">Contact</a>
+		<a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
 	</div>
 
 	<div id="main">
@@ -95,7 +95,9 @@
 
 		<section id="blurb">
 			<h3>Designers change the world.<br>
-Share your story with us and put yourself on the map.
+				And designers of color change the discourse of design.
+<br>
+				Share your story with us and put yourself on the map.</h3>
 
 
 <div id="linkcontainer">
@@ -108,9 +110,6 @@ Share your story with us and put yourself on the map.
 </div>
 
 	<footer>
-		<a href="">About</a>
-		<a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
-		<a href="">Privacy Policy</a>
 		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
 	</footer>
